crates/vize_patina/src/rules/script/snapshots/vize_patina__rules__script__valid_define_props__tests__invalid_both_type_and_runtime.snap
---
source: crates/vize_patina/src/rules/script/valid_define_props.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "script/valid-define-props",
        severity: Error,
        message: "defineProps() has both a type argument and a runtime argument.",
        start: 29,
        end: 44,
        help: Some(
            "Declare props with either a type argument (`defineProps<{ ... }>()`) or a runtime argument (`defineProps({ ... })`), not both.",
        ),
        labels: [],
        fix: None,
    },
]
